[gd_scene load_steps=5 format=3 uid="uid://dcf68cgqy7yg"]

[ext_resource type="Script" uid="uid://c435jwylo6bff" path="res://space/space.gd" id="1_bv8oe"]
[ext_resource type="PackedScene" uid="uid://cc5qh7s63ja10" path="res://ship/ship.tscn" id="2_b4b4b"]
[ext_resource type="PackedScene" uid="uid://be0kuuecfd2o" path="res://space_layer/space_layer.tscn" id="3_mk1j7"]
[ext_resource type="PackedScene" uid="uid://ccekykctwsbov" path="res://space_edge/space_edge.tscn" id="4_4mno5"]

[node name="Space" type="Node2D"]
script = ExtResource("1_bv8oe")

[node name="Ship" parent="." instance=ExtResource("2_b4b4b")]
z_index = 9

[node name="SpaceLayer4" parent="." instance=ExtResource("3_mk1j7")]
visible = false
z_index = 8
position = Vector2(0, 60)
layer_level = 4

[node name="SpaceLayer3" parent="." instance=ExtResource("3_mk1j7")]
visible = false
z_index = 6
position = Vector2(0, 120)
layer_level = 3

[node name="SpaceLayer2" parent="." instance=ExtResource("3_mk1j7")]
visible = false
z_index = 4
position = Vector2(0, 180)
layer_level = 2

[node name="SpaceLayer1" parent="." instance=ExtResource("3_mk1j7")]
visible = false
z_index = 2
position = Vector2(0, 240)
layer_level = 1

[node name="SpaceLayer0" parent="." instance=ExtResource("3_mk1j7")]
position = Vector2(0, 300)

[node name="SpaceEdge" parent="." instance=ExtResource("4_4mno5")]
z_index = -1

[connection signal="cell_clicked" from="SpaceLayer0" to="." method="_on_space_layer_cell_clicked"]
